Ajustando regras de negocios para Bater Ponto, Ferias e Folha de Pagamento